--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisor/list-turmas.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisor/list-turmas.html
@@ -24,6 +24,11 @@
 <div class="alert alert-dismissible alert-warning" th:if="${!#strings.isEmpty(error)}">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
   <p th:text="${error}"></p>
+</div>
+
+<div class="alert alert-dismissible alert-info" th:if="${turmasEncerradas} != null">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  É necessário atualizar o status da turma, <a href="#" class="alert-link">Turma</a> - 2016.1, para <strong>concluída</strong> pois seu período se encerrou.
 </div>		
 	
     <div class="row">
