--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisor/acompanhamento-estagiario.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisor/acompanhamento-estagiario.html
@@ -104,12 +104,12 @@
 				<a th:href="@{/Supervisor/Turma/Acompanhamento/{id}/Frequencias(id=${estagio.id})}" class="btn btn-xs pull-right gp-btn-opcao">Gerenciar</a>
 			  </div>
 	          <div id="consolidado" class="panel-body collapse in">
-	            <a href="#" class="btn btn-default disabled" role="button"><span>100h</span> <br/>Carga Horária</a>
-	            <a href="#" class="btn btn-bluegray disabled" role="button"><span>10</span> <br/>Pendências</a>
-	            <a href="#" class="btn btn-warning disabled" role="button"><span>10%</span> <br/>Faltas</a>
-	            <a href="#" class="btn btn-info disabled" role="button"><span>4</span> <br/>Atrasos</a>
-	            <a href="#" class="btn btn-primary disabled" role="button"><span>0</span> <br/>Reposições</a>
-	            <a href="#" class="btn btn-success disabled" role="button"><span>20%</span> <br/>Presenças</a>
+	            <a href="#" class="btn btn-default disabled" role="button"><span th:inline="text">[[${consolidadoFrequencia.horasEstagiadas}]]h</span> <br/>Horas Estagiadas</a>
+	            <a href="#" class="btn btn-bluegray disabled" role="button"><span th:inline="text">[[${consolidadoFrequencia.totalPendecias}]]</span> <br/>Pendências</a>
+	            <a href="#" class="btn btn-warning disabled" role="button"><span th:inline="text">[[${consolidadoFrequencia.totalAtrasos}]]</span> <br/>Atrasos</a>
+	            <a href="#" class="btn btn-primary disabled" role="button"><span th:inline="text">[[${consolidadoFrequencia.totalReposicoes}]]</span> <br/>Reposições</a>
+	            <a href="#" class="btn btn-danger disabled" role="button"><span th:inline="text">[[${consolidadoFrequencia.porcentagemFaltas}]]%</span> <br/>Faltas</a>
+	            <a href="#" class="btn btn-success disabled" role="button"><span th:inline="text">[[${consolidadoFrequencia.porcentagemPresencas}]]%</span> <br/>Presenças</a>
 	          </div>
 	        </div>
 
