--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisor/list-turmas.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisor/list-turmas.html
@@ -21,14 +21,15 @@
 
 	<div class="container animated fadeInRight"> 
 
-<div class="alert alert-dismissible alert-warning" th:if="${!#strings.isEmpty(error)}">
-  <button type="button" class="close" data-dismiss="alert">&times;</button>
-  <p th:text="${error}"></p>
-</div>
+	<div class="alert alert-dismissible alert-warning" th:if="${!#strings.isEmpty(error)}">
+	  <button type="button" class="close" data-dismiss="alert">&times;</button>
+	  <p th:text="${error}"></p>
+	</div>
 
-<div class="alert alert-dismissible alert-info" th:if="${turmasEncerradas} != null">
+
+<div class="alert alert-dismissible alert-info" th:if="${turmasEncerradas} != null" th:each="turma : ${turmasEncerradas}">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
-  É necessário atualizar o status da turma, <a href="#" class="alert-link">Turma</a> - 2016.1, para <strong>concluída</strong> pois seu período se encerrou.
+  É necessário atualizar o status da turma, <a th:href="@{'/Supervisor/Turma/' + ${turma.id}}" class="alert-link" th:inline="text">[[${turma.nome}]]</a>, para <strong>concluída</strong> pois seu período se encerrou.
 </div>		
 	
     <div class="row">
