--- a/aplicacoes/gestao-estagio/src/main/resources/templates/layouts/LayoutGestaoPessoas.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/layouts/LayoutGestaoPessoas.html
@@ -28,13 +28,13 @@
 	        <span class="icon-bar"></span>
 	      </button>
 	      	<a sec:authorize="hasAnyAuthority('ESTAGIARIO')" class="navbar-brand" th:href="@{/Estagiario/}">NPI</a>
-	      	<a sec:authorize="hasAnyAuthority('DOSCENTE', 'STA', 'SUPERVISOR')" class="navbar-brand" th:href="@{/Supervisor/}">NPI</a>
+	      	<a sec:authorize="hasAnyAuthority('DOSCENTE', 'STA', 'SUPERVISOR')" class="navbar-brand" th:href="@{/Supervisao/}">NPI</a>
 	    </div>
 	
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
 	      <ul sec:authorize="hasAnyAuthority('DOSCENTE', 'STA', 'SUPERVISOR')" class="nav navbar-nav">
-	        <li id="turmas"><a th:href="@{/Supervisor/}">Minhas Turmas <span class="sr-only">(current)</span></a></li>
-	        <li id="nova-turma"><a th:href="@{/Supervisor/Turma/Adicionar}">Nova Turma<span class="sr-only">(current)</span></a></li>
+	        <li id="turmas"><a th:href="@{/Supervisao/}">Minhas Turmas <span class="sr-only">(current)</span></a></li>
+	        <li id="nova-turma"><a th:href="@{/Supervisao/Turma/Adicionar}">Nova Turma<span class="sr-only">(current)</span></a></li>
 	      </ul>
 	      <ul sec:authorize="hasAnyAuthority('ESTAGIARIO')" class="nav navbar-nav">
 	        <li class="active"><a th:href="@{/Estagiario/}">Minhas Turmas <span class="sr-only">(current)</span></a></li>
