--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/adicionar-avaliacao-rendimento.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/adicionar-avaliacao-rendimento.html
@@ -27,44 +27,12 @@
 	<div class="container animated fadeInRight">
 	    <div class="row">
 	      <div class="col-md-4">
-	          <div class="panel panel-bluegray">
-	          <div class="panel-heading">
-	            <a class="panel-title" data-toggle="collapse" data-target="#detalhesTurma"><i class="fa fa-caret-down" aria-hidden="true"></i> Turma NPI - 2016.1</a>
-			  </div>
-	          <div id="detalhesTurma" class="panel-body collapse in">
-				  <table class="table table-hover">
-				    <tbody>
-				     <tr>
-				        <td><strong>Orientador</strong></td>
-				        <td th:text="${estagio.turma.orientador == null ? 'Não há orientador' : estagio.turma.orientador.nome}"></td>
-				      </tr>
-				      <tr>
-				        <td><strong>Supervisores</strong></td>
-				     	<td th:inline="text"> <span th:if="${#lists.isEmpty(estagio.turma.supervisores)}">Não há supervisores</span> <span th:each="sup : ${estagio.turma.supervisores}"> [[${sup.nome}]],</span></td>
-				      </tr>
-				      <tr>
-				        <td><strong>Período</strong></td>
-				        <td><label th:text="${#dates.format(estagio.turma.inicio, 'dd/MM/yyyy')}"></label>  a <label th:text="${#dates.format(estagio.turma.termino, 'dd/MM/yyyy')}"></label></td>
-				      </tr>
-				      <tr>
-				        <td><strong>Tipo</strong></td>
-				        <td th:text="${estagio.turma.tipoTurma}"></td>
-				      </tr>
-				      <tr>
-				        <td><strong>Status</strong></td>
-				        <td th:text="${estagio.turma.status}"></td>
-				      </tr>
-				    </tbody>
-				  </table>
-	           </div>
-	        </div>
-	
 	
 	            <div class="panel panel-bluegray">
 	          <div class="panel-heading">
-	            <a class="panel-title" data-toggle="collapse" data-target="#estagiario"><i class="fa fa-caret-down" aria-hidden="true"></i> Estagiário</a>
+	            <a class="panel-title" data-toggle="collapse" data-target="#estagiario" th:inline="text"><i class="fa fa-caret-down fa-caret-right fa-chevron-down" aria-hidden="true"></i> Estagiário: [[${estagio.estagiario.nomeCompleto}]]</a>
 			  </div>
-	          <div id="estagiario" class="panel-body collapse in">
+	          <div id="estagiario" class="panel-body collapse">
 	          	<table class="table table-hover">
 				    <tbody>
 				      <tr>
@@ -92,6 +60,40 @@
 				  </table>
 	          </div>
 	        </div>
+
+
+	          <div class="panel panel-bluegray">
+	          <div class="panel-heading">
+	            <a class="panel-title" data-toggle="collapse" data-target="#detalhesTurma" th:inline="text"><i class="fa fa-caret-down fa-caret-right fa-chevron-down" aria-hidden="true"></i> Turma: [[${estagio.turma.nome}]] - [[${estagio.turma.semestre}]]</a>
+			  </div>
+	          <div id="detalhesTurma" class="panel-body collapse">
+				  <table class="table table-hover">
+				    <tbody>
+				     <tr>
+				        <td><strong>Orientador</strong></td>
+				        <td th:text="${estagio.turma.orientador == null ? 'Não há orientador' : estagio.turma.orientador.nome}"></td>
+				      </tr>
+				      <tr>
+				        <td><strong>Supervisores</strong></td>
+				     	<td th:inline="text"> <span th:if="${#lists.isEmpty(estagio.turma.supervisores)}">Não há supervisores</span> <span th:each="sup : ${estagio.turma.supervisores}"> [[${sup.nome}]],</span></td>
+				      </tr>
+				      <tr>
+				        <td><strong>Período</strong></td>
+				        <td><label th:text="${#dates.format(estagio.turma.inicio, 'dd/MM/yyyy')}"></label>  a <label th:text="${#dates.format(estagio.turma.termino, 'dd/MM/yyyy')}"></label></td>
+				      </tr>
+				      <tr>
+				        <td><strong>Tipo</strong></td>
+				        <td th:text="${estagio.turma.tipoTurma}"></td>
+				      </tr>
+				      <tr>
+				        <td><strong>Status</strong></td>
+				        <td th:text="${estagio.turma.status}"></td>
+				      </tr>
+				    </tbody>
+				  </table>
+	           </div>
+	        </div>
+	
 	      </div>
 
 
