--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/avaliar-relatorio.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/avaliar-relatorio.html
@@ -29,10 +29,10 @@
 	      <div class="col-md-4">
 	        <div class="panel panel-bluegray">
 	          <div class="panel-heading">
-	            <a class="panel-title" data-toggle="collapse" data-target="#estagiario"><i class="fa fa-caret-down" aria-hidden="true"></i>  Estagiário</a>
+	            <a class="panel-title" data-toggle="collapse" data-target="#estagiario" th:inline="text"><i class="fa fa-caret-down fa-caret-right fa-chevron-down" aria-hidden="true"></i> Estagiário: [[${estagio.estagiario.nomeCompleto}]]</a>
 				</div>
 
-	          <div id="estagiario" class="panel-body collapse in">
+	          <div id="estagiario" class="panel-body collapse">
 	          		<table class="table table-hover">
 					    <tbody>
 				      <tr>
@@ -66,9 +66,9 @@
 	        
 	         <div class="panel panel-bluegray">
 	          <div class="panel-heading">
-	            <a class="panel-title" data-toggle="collapse" data-target="#detalhesTurma"><i class="fa fa-caret-down" aria-hidden="true"></i> Turma NPI - 2016.1</a>
+	            <a class="panel-title" data-toggle="collapse" data-target="#detalhesTurma" th:inline="text"><i class="fa fa-caret-down fa-caret-right fa-chevron-down" aria-hidden="true"></i> Turma: [[${estagio.turma.nome}]] - [[${estagio.turma.semestre}]]</a>
 			  </div>
-	          <div id="detalhesTurma" class="panel-body collapse in">
+	          <div id="detalhesTurma" class="panel-body collapse">
 				  <table class="table table-hover">
 				    <tbody>
 				     <tr>
